@@ -1,5 +1,11 @@
 2012-02-03  Richard Laager <rlaager@wiktel.com>
 
+	* util/grub-mkimage.c (main): Fix format-security warning.
+	* util/grub-mkrelpath.c (main): Likewise.
+	* util/grub-probe.c (main): Likewise.
+
+2012-02-03  Richard Laager <rlaager@wiktel.com>
+
 	* util/grub-probe.c (probe): Don't crash on canonicalize_file_name
 	failure.
 	Put back lost PRINT_DRIVE.
